--- a/lib/anomaly_kmeans.ipynb
+++ b/lib/anomaly_kmeans.ipynb
@@ -33,10 +33,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv(\"./output/data_patch_1.csv\")\n",
-    "df2 = pd.read_csv(\"./output/data_patch_2.csv\")\n",
-    "df3 = pd.read_csv(\"./output/data_patch_3.csv\")\n",
-    "df4 = pd.read_csv(\"./output/data_patch_4.csv\")"
+    "# df1 = pd.read_csv(\"./output/data_patch_1.csv\")\n",
+    "# df2 = pd.read_csv(\"./output/data_patch_2.csv\")\n",
+    "# df3 = pd.read_csv(\"./output/data_patch_3.csv\")\n",
+    "# df4 = pd.read_csv(\"./output/data_patch_4.csv\")"
    ]
   },
   {
