--- a/lib/feat_emb.ipynb
+++ b/lib/feat_emb.ipynb
@@ -147,7 +147,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\02213R744\\AppData\\Local\\Temp\\ipykernel_3184\\864869447.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\02213R744\\AppData\\Local\\Temp\\ipykernel_26344\\864869447.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -194,16 +194,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_engine_1 = pd.DataFrame()\n",
-    "# for i in range(len(data_clean)):\n",
-    "#     df = data_clean[i][data_clean[i]['engine'] == 1].copy()  # Make a copy of the DataFrame\n",
-    "#     max_cycle = df['cycle'].max()\n",
-    "#     for j in range(df.shape[0]):\n",
-    "#         if df.loc[j, 'cycle'] > max_cycle - 25:\n",
-    "#             df.loc[j, 'label'] = 1\n",
-    "#         else:\n",
-    "#             df.loc[j, 'label'] = 0\n",
-    "#     df_engine_1 = pd.concat([df_engine_1, df], ignore_index=True)"
+    "# df_sample2 = df_sample[100000:160359]\n",
+    "df_sample2 = df_sample[:10000]"
    ]
   },
   {
@@ -212,40 +204,10 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(160359, 9)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_sample.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_sample2 = df_sample[100000:160359]\n",
-    "df_sample2 = df_sample[:10000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\02213R744\\Documents\\College\\CLG\\MtechProject\\code\\main\\train\\tsfm_public\\toolkit\\time_series_preprocessor.py:220: SettingWithCopyWarning: \n",
+      "c:\\Users\\02213R744\\Documents\\College\\CLG\\MtechProject\\code\\main\\predictive_maintenance\\lib\\tsfm_public\\toolkit\\time_series_preprocessor.py:220: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -307,7 +269,7 @@
     "    print('3')\n",
     "    final_df=pd.DataFrame(result_tensor[0].detach().numpy(),columns=forecast_columns,index=data.index[:len(result_tensor[0])])\n",
     "    print('4')\n",
-    "    final_df.to_csv(f'./output/data_patch_4.csv', index=False)\n",
+    "    final_df.to_csv(f'./output/data_patch_1.csv', index=False)\n",
     "    print('Saved dataframe named data_patch with context aware features at output folder')"
    ]
   },
