--- a/lib/patchTSmixer_model.ipynb
+++ b/lib/patchTSmixer_model.ipynb
@@ -131,76 +131,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df_engine_1 = pd.DataFrame()\n",
-    "# for i in range(len(data_clean)):\n",
-    "#     df = data_clean[i][data_clean[i]['engine'] == 1].copy()  # Make a copy of the DataFrame\n",
-    "#     max_cycle = df['cycle'].max()\n",
-    "#     for j in range(df.shape[0]):\n",
-    "#         if df.loc[j, 'cycle'] > max_cycle - 25:\n",
-    "#             df.loc[j, 'label'] = 1\n",
-    "#         else:\n",
-    "#             df.loc[j, 'label'] = 0\n",
-    "#     df_engine_1 = pd.concat([df_engine_1, df], ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "correlation_matrix = df_engine_1.drop(columns=['engine']).corr()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "correlation_matrix = df_engine_1.drop(columns=['engine']).corr()\n",
     "high_corr_columns = correlation_matrix[abs(correlation_matrix['label'] )> 0.03].index.tolist()\n",
-    "# high_corr_colm = correlation_matrix[abs(correlation_matrix['label'] )> 0.03].T.columns\n",
-    "\n",
-    "df_sample = df_engine_1[high_corr_columns]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['cycle', 'Fan_inlet_temperature_R', 'Fan_inlet_Pressure_psia',\n",
-       "       'bypass_duct_pressure_psia', 'HPC_outlet_pressure_psia',\n",
-       "       'Ratio_of_fuel_flow_to_Ps30_pps_psia', 'Corrected_core_speed_rpm',\n",
-       "       'High_pressure_turbines_Cool_air_flow',\n",
-       "       'Low_pressure_turbines_Cool_air_flow', 'index'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_sample.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_sample = df_engine_1[high_corr_columns]\n",
     "df_sample = df_sample.drop(columns=['label'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +148,7 @@
        "(160359, 9)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,19 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# correlation_matrix = df_engine_1.drop(columns=['engine']).corr()\n",
-    "# high_corr_colm = correlation_matrix[abs(correlation_matrix['label'] )> 0.03].T.columns\n",
-    "# df_engine_1_sample_1 = df_engine_1[high_corr_colm]\n",
-    "# df_engine_1_sample = df_engine_1_sample_1.drop(columns=['label'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,125 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cycle</th>\n",
-       "      <th>Fan_inlet_temperature_R</th>\n",
-       "      <th>Fan_inlet_Pressure_psia</th>\n",
-       "      <th>bypass_duct_pressure_psia</th>\n",
-       "      <th>HPC_outlet_pressure_psia</th>\n",
-       "      <th>Ratio_of_fuel_flow_to_Ps30_pps_psia</th>\n",
-       "      <th>Corrected_core_speed_rpm</th>\n",
-       "      <th>High_pressure_turbines_Cool_air_flow</th>\n",
-       "      <th>Low_pressure_turbines_Cool_air_flow</th>\n",
-       "      <th>index</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>518.67</td>\n",
-       "      <td>14.62</td>\n",
-       "      <td>21.61</td>\n",
-       "      <td>554.36</td>\n",
-       "      <td>521.66</td>\n",
-       "      <td>8138.62</td>\n",
-       "      <td>39.06</td>\n",
-       "      <td>23.4190</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>518.67</td>\n",
-       "      <td>14.62</td>\n",
-       "      <td>21.61</td>\n",
-       "      <td>553.75</td>\n",
-       "      <td>522.28</td>\n",
-       "      <td>8131.49</td>\n",
-       "      <td>39.00</td>\n",
-       "      <td>23.4236</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>518.67</td>\n",
-       "      <td>14.62</td>\n",
-       "      <td>21.61</td>\n",
-       "      <td>554.26</td>\n",
-       "      <td>522.42</td>\n",
-       "      <td>8133.23</td>\n",
-       "      <td>38.95</td>\n",
-       "      <td>23.3442</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   cycle  Fan_inlet_temperature_R  Fan_inlet_Pressure_psia  \\\n",
-       "0      1                   518.67                    14.62   \n",
-       "1      2                   518.67                    14.62   \n",
-       "2      3                   518.67                    14.62   \n",
-       "\n",
-       "   bypass_duct_pressure_psia  HPC_outlet_pressure_psia  \\\n",
-       "0                      21.61                    554.36   \n",
-       "1                      21.61                    553.75   \n",
-       "2                      21.61                    554.26   \n",
-       "\n",
-       "   Ratio_of_fuel_flow_to_Ps30_pps_psia  Corrected_core_speed_rpm  \\\n",
-       "0                               521.66                   8138.62   \n",
-       "1                               522.28                   8131.49   \n",
-       "2                               522.42                   8133.23   \n",
-       "\n",
-       "   High_pressure_turbines_Cool_air_flow  Low_pressure_turbines_Cool_air_flow  \\\n",
-       "0                                 39.06                              23.4190   \n",
-       "1                                 39.00                              23.4236   \n",
-       "2                                 38.95                              23.3442   \n",
-       "\n",
-       "   index  \n",
-       "0      0  \n",
-       "1      1  \n",
-       "2      2  "
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -550,269 +359,38 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 60119/601190 [15:53<2:04:59, 72.15it/s]"
+      "100%|██████████| 1203/1203 [02:14<00:00,  1.32s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'loss': 0.4861, 'learning_rate': 9e-05, 'epoch': 1.0}\n"
+      "{'loss': 0.4878, 'learning_rate': 0.0, 'epoch': 1.0}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                        \n",
-      " 10%|█         | 60119/601190 [16:57<2:04:59, 72.15it/s]"
+      "                                                   \n",
+      "100%|██████████| 1203/1203 [02:42<00:00,  1.32s/it]Checkpoint destination directory ./output/checkpoint-1203 already exists and is non-empty.Saving will proceed but saved results may be invalid.\n",
+      "100%|██████████| 1203/1203 [02:42<00:00,  7.40it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eval_loss': 0.7522053122520447, 'eval_runtime': 64.6456, 'eval_samples_per_second': 247.936, 'eval_steps_per_second': 123.968, 'epoch': 1.0}\n"
+      "{'eval_loss': 0.7541259527206421, 'eval_runtime': 28.2042, 'eval_samples_per_second': 568.283, 'eval_steps_per_second': 5.708, 'epoch': 1.0}\n",
+      "{'train_runtime': 162.5109, 'train_samples_per_second': 739.876, 'train_steps_per_second': 7.403, 'train_loss': 0.48778759075618244, 'epoch': 1.0}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 120238/601190 [32:27<1:58:27, 67.67it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.4748, 'learning_rate': 8e-05, 'epoch': 2.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                         \n",
-      " 20%|██        | 120238/601190 [33:29<1:58:27, 67.67it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.7497198581695557, 'eval_runtime': 62.1479, 'eval_samples_per_second': 257.901, 'eval_steps_per_second': 128.95, 'epoch': 2.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 30%|███       | 180357/601190 [48:43<1:38:07, 71.48it/s]  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.4734, 'learning_rate': 7e-05, 'epoch': 3.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                         \n",
-      " 30%|███       | 180357/601190 [49:46<1:38:07, 71.48it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.7491263747215271, 'eval_runtime': 63.0877, 'eval_samples_per_second': 254.059, 'eval_steps_per_second': 127.029, 'epoch': 3.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 40%|████      | 240476/601190 [1:04:50<1:27:10, 68.96it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.4725, 'learning_rate': 6e-05, 'epoch': 4.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                           \n",
-      " 40%|████      | 240476/601190 [1:05:52<1:27:10, 68.96it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.7478170394897461, 'eval_runtime': 61.8744, 'eval_samples_per_second': 259.041, 'eval_steps_per_second': 129.52, 'epoch': 4.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 50%|█████     | 300595/601190 [1:21:32<1:13:38, 68.03it/s]  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.4718, 'learning_rate': 5e-05, 'epoch': 5.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                           \n",
-      " 50%|█████     | 300595/601190 [1:22:33<1:13:38, 68.03it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.7470899820327759, 'eval_runtime': 61.1498, 'eval_samples_per_second': 262.11, 'eval_steps_per_second': 131.055, 'epoch': 5.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 60%|██████    | 360714/601190 [1:38:29<59:47, 67.04it/s]    "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.4711, 'learning_rate': 4e-05, 'epoch': 6.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                         \n",
-      " 60%|██████    | 360714/601190 [1:39:33<59:47, 67.04it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.7460920214653015, 'eval_runtime': 63.7144, 'eval_samples_per_second': 251.56, 'eval_steps_per_second': 125.78, 'epoch': 6.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 70%|███████   | 420833/601190 [1:54:58<41:06, 73.12it/s]    "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.4707, 'learning_rate': 3e-05, 'epoch': 7.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                         \n",
-      " 70%|███████   | 420833/601190 [1:56:01<41:06, 73.12it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.7457196712493896, 'eval_runtime': 62.9444, 'eval_samples_per_second': 254.637, 'eval_steps_per_second': 127.319, 'epoch': 7.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 80%|████████  | 480952/601190 [2:11:33<27:35, 72.62it/s]    "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.4702, 'learning_rate': 2e-05, 'epoch': 8.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                         \n",
-      " 80%|████████  | 480952/601190 [2:12:38<27:35, 72.62it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.7452646493911743, 'eval_runtime': 64.3791, 'eval_samples_per_second': 248.963, 'eval_steps_per_second': 124.481, 'epoch': 8.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 90%|█████████ | 541071/601190 [2:27:32<13:54, 72.03it/s]    "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'loss': 0.4701, 'learning_rate': 1e-05, 'epoch': 9.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                         \n",
-      " 90%|█████████ | 541071/601190 [2:28:34<16:30, 60.70it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'eval_loss': 0.7450457811355591, 'eval_runtime': 61.4648, 'eval_samples_per_second': 260.767, 'eval_steps_per_second': 130.384, 'epoch': 9.0}\n",
-      "{'train_runtime': 8914.2347, 'train_samples_per_second': 134.883, 'train_steps_per_second': 67.442, 'train_loss': 0.47339749904009826, 'epoch': 9.0}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 12024/12024 [00:53<00:00, 226.18it/s]"
+      "100%|██████████| 241/241 [00:14<00:00, 16.30it/s]"
      ]
     },
     {
